{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 32,
  "lineage": "608f513e-5ffd-798d-cd25-7c5ac7b45cf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:listener/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1/59185fed69c669a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:listener/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1/59185fed69c669a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:loadbalancer/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Mylb",
            "aws_lb_target_group.my-tg",
            "aws_subnet.public3",
            "aws_subnet.pvt1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097c4e1feeea169e5",
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:instance/i-081374d159ed2494b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081374d159ed2494b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e6aae9395bf5bee",
            "private_dns": "ip-10-0-5-87.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.87",
            "public_ip": "54.169.81.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b8b2282f33093ed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bc87aadea99bd4a",
            "tags": {
              "Name": "terraform2"
            },
            "tags_all": {
              "Name": "terraform2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f741d1836b9d8cf"
            ]
          },
          "dependencies": [
            "aws_security_group.bsk",
            "aws_subnet.public3",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097c4e1feeea169e5",
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:instance/i-035a19f9553dc94fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035a19f9553dc94fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0635d11acb0bcdb9c",
            "private_dns": "ip-10-0-5-164.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.164",
            "public_ip": "13.250.52.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0deeaa08a727826",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bc87aadea99bd4a",
            "tags": {
              "Name": "terraform3"
            },
            "tags_all": {
              "Name": "terraform3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f741d1836b9d8cf"
            ]
          },
          "dependencies": [
            "aws_security_group.bsk",
            "aws_subnet.public3",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:internet-gateway/igw-0b596e379ad53e907",
            "id": "igw-0b596e379ad53e907",
            "owner_id": "628326406223",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Mylb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:loadbalancer/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1",
            "arn_suffix": "app/tf-lb-20240328154802099500000001/f93c7d9763f231d1",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240328154802099500000001-171650446.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:loadbalancer/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240328154802099500000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a1e8248a0c263c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08bc87aadea99bd4a"
              },
              {
                "subnet_id": "subnet-0ae2672a3ba2bbba3"
              }
            ],
            "subnets": [
              "subnet-08bc87aadea99bd4a",
              "subnet-0ae2672a3ba2bbba3"
            ],
            "vpc_id": "vpc-0b3ea80b6e30d724b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_subnet.public3",
            "aws_subnet.pvt1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0",
            "arn_suffix": "targetgroup/my-tg/cbc5571fc5942bb0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:loadbalancer/app/tf-lb-20240328154802099500000001/f93c7d9763f231d1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0-20240328154803487800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0",
            "target_id": "i-035a19f9553dc94fb"
          },
          "dependencies": [
            "aws_instance.terraform3",
            "aws_lb_target_group.my-tg",
            "aws_security_group.bsk",
            "aws_subnet.public3",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "atttach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0-20240328154803519200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:628326406223:targetgroup/my-tg/cbc5571fc5942bb0",
            "target_id": "i-081374d159ed2494b"
          },
          "dependencies": [
            "aws_instance.terraform2",
            "aws_lb_target_group.my-tg",
            "aws_security_group.bsk",
            "aws_subnet.public3",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:route-table/rtb-037e65d9d3579f955",
            "id": "rtb-037e65d9d3579f955",
            "owner_id": "628326406223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b596e379ad53e907",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroute"
            },
            "tags_all": {
              "Name": "myroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad111e603edfeaeb",
            "route_table_id": "rtb-037e65d9d3579f955",
            "subnet_id": "subnet-08bc87aadea99bd4a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.myroute",
            "aws_subnet.public3",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d305dcf156220e",
            "route_table_id": "rtb-037e65d9d3579f955",
            "subnet_id": "subnet-0ae2672a3ba2bbba3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.myroute",
            "aws_subnet.pvt1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bsk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:security-group/sg-02f741d1836b9d8cf",
            "description": "allows inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f741d1836b9d8cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bsk",
            "name_prefix": "",
            "owner_id": "628326406223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bsk"
            },
            "tags_all": {
              "Name": "bsk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbsecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:security-group/sg-00ac1aa054eb6f62b",
            "description": "security group for db ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00ac1aa054eb6f62b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dbsecurity",
            "name_prefix": "",
            "owner_id": "628326406223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bsk2"
            },
            "tags_all": {
              "Name": "bsk2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:subnet/subnet-0dc5671d4c19fb5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc5671d4c19fb5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628326406223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:subnet/subnet-08bc87aadea99bd4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bc87aadea99bd4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628326406223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public3"
            },
            "tags_all": {
              "Name": "public3"
            },
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:subnet/subnet-0ae2672a3ba2bbba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae2672a3ba2bbba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628326406223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt1"
            },
            "tags_all": {
              "Name": "pvt1"
            },
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:subnet/subnet-09027894faf0ee369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09027894faf0ee369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628326406223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt2"
            },
            "tags_all": {
              "Name": "pvt2"
            },
            "vpc_id": "vpc-0b3ea80b6e30d724b"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:628326406223:vpc/vpc-0b3ea80b6e30d724b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05659daa717f3ab1a",
            "default_route_table_id": "rtb-0618f89fe376fae30",
            "default_security_group_id": "sg-04a1e8248a0c263c7",
            "dhcp_options_id": "dopt-0bdf7c7c8d46c27e3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3ea80b6e30d724b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0618f89fe376fae30",
            "owner_id": "628326406223",
            "tags": {
              "Name": "Vpc1"
            },
            "tags_all": {
              "Name": "Vpc1"
            }
          }
        }
      ]
    }
  ]
}